<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/hr_measure_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/hr_measure_image"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:gravity="center_horizontal"
                android:src="@drawable/hr"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hr_measure_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/hr_measure_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_data"
                    android:textSize="15sp"
                    android:layout_marginRight="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#C0C0C0"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:text="@string/unit_hr" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hr_measure_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:elevation="5dp"
                android:text="@string/measure_hr"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/spo2_measure_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="50dp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr_measure_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/spo2_measure_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:gravity="center_horizontal"
                android:src="@drawable/spo2"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spo2_measure_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/spo2_measure_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_data"
                    android:textSize="15sp"
                    android:layout_marginRight="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#C0C0C0"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:text="@string/unit_spo2" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/spo2_measure_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:elevation="5dp"
                android:text="@string/measure_spo2"
                android:layout_centerHorizontal="true"
                android:enabled="false"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="50dp"
        android:elevation="5dp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>